@@ -1,5 +1,5 @@
 
-from .configVar import ConfigVar, ConstConfigVar
+from .configVarOne import ConfigVar, ConstConfigVar
 from .configVarList import ConfigVarList, value_ref_re
 from .configVarStack import ConfigVarStack, var_stack
 
