@@ -18,7 +18,7 @@ import sys
 import utils
 import aYaml
 from . import configVarList
-from . import configVar
+from . import configVarOne
 
 class ConfigVarStack(configVarList.ConfigVarList):
     """ Keeps a list of named build config values.
@@ -88,7 +88,7 @@ class ConfigVarStack(configVarList.ConfigVarList):
         try:
             values_as_strs = list(map(str, values))
             var_obj = self[var_name]
-            if var_name.endswith(configVar.ConfigVar.variable_name_endings_to_normpath):
+            if var_name.endswith(configVarOne.ConfigVar.variable_name_endings_to_normpath):
                 values_as_strs = [os.path.normpath(value) for value in values_as_strs]
             if list(var_obj) != values_as_strs:
                 raise Exception("Const variable {} ({}) already defined: new values: {}"\
